tests/samples/negative/pointers/unsafe_deref_required.ax
module unsafe_deref_required;

fn as_const_ptr(value: &i32) -> *const i32 {
    return unsafe { ptrat<*const i32>(ptraddr(value)) };
}

fn main() -> i32 {
    var value: i32 = 1;
    let ptr: *const i32 = as_const_ptr(&value);
    return *ptr;
}
